// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getHomepage: getHomepage Complete Canvas 1`] = `
Object {
  "format": "text/html",
  "id": "https://example.org/info/book1/",
  "label": Object {
    "en": Array [
      "Home page for Book 1",
    ],
  },
  "type": "Text",
}
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getHomepageId: getHomepageId Complete Canvas 1`] = `"https://example.org/info/book1/"`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getLogo: getLogo Complete Canvas 1`] = `
Array [
  Object {
    "id": "https://example.org/logos/institution1.jpg",
    "service": Array [
      "https://example.org/service/inst1",
    ],
    "type": "Image",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getLogoIds: getLogoIds Complete Canvas 1`] = `
Array [
  "https://example.org/logos/institution1.jpg",
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getPartOf: getPartOf Complete Canvas 1`] = `
Array [
  Object {
    "id": "https://example.org/collections/books/",
    "type": "Collection",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getPartOfId: getPartOfId Complete Canvas 1`] = `
Array [
  Object {
    "id": "https://example.org/collections/books/",
    "schema": "collection",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getRendering: getRendering Complete Canvas 1`] = `
Array [
  Object {
    "format": "application/pdf",
    "id": "https://example.org/iiif/book1.pdf",
    "label": Object {
      "en": Array [
        "Download as PDF",
      ],
    },
    "type": "Text",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getRenderingIds: getRenderingIds Complete Canvas 1`] = `
Array [
  "https://example.org/iiif/book1.pdf",
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getSeeAlso: getSeeAlso Complete Canvas 1`] = `
Array [
  Object {
    "format": "text/xml",
    "id": "https://example.org/library/catalog/book1.xml",
    "profile": "https://example.org/profiles/bibliographic",
    "type": "Dataset",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getSeeAlsoIds: getSeeAlsoIds Complete Canvas 1`] = `
Array [
  "https://example.org/library/catalog/book1.xml",
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getService: getService Complete Canvas 1`] = `
Array [
  Object {
    "id": "https://example.org/service/example",
    "profile": "https://example.org/docs/example-service.html",
    "type": "Service",
  },
]
`;

exports[`api/3.x/canvas/linking Canvas: Complete Canvas getServiceIds: getServiceIds Complete Canvas 1`] = `
Array [
  "https://example.org/service/example",
]
`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getHomepage: getHomepage Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getHomepageId: getHomepageId Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getLogo: getLogo Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getLogoIds: getLogoIds Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getPartOf: getPartOf Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getPartOfId: getPartOfId Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getRendering: getRendering Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getRenderingIds: getRenderingIds Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getSeeAlso: getSeeAlso Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getSeeAlsoIds: getSeeAlsoIds Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getService: getService Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/linking Canvas: Minimal Canvas getServiceIds: getServiceIds Minimal Canvas 1`] = `Array []`;
